[PR c++/87269] Mark string operator overload in template defn.

https://gcc.gnu.org/ml/gcc-patches/2018-11/msg01458.html
	PR c++/87269
	* parser.c (lookup_literal_operator): Mark overload for keeping
	when inside template.  Refactor.

	* g++.dg/lookup/pr87269.C: New.

From-SVN: r266210